--- a/.bzrignore
+++ b/.bzrignore
@@ -27,3 +27,5 @@ NuxCore/nux-core-0.9.pc
 NuxCore/nux-core-1.0.pc
 NuxCore/nux-core.pc
 add_license.sh
+NuxImage/nux-image-0.9.pc
+NuxImage/nux-image.pc
