--- a/.bzrignore
+++ b/.bzrignore
@@ -29,3 +29,5 @@ NuxCore/nux-core.pc
 add_license.sh
 NuxImage/nux-image-0.9.pc
 NuxImage/nux-image.pc
+NuxMesh/nux-mesh-0.9.pc
+NuxMesh/nux-mesh.pc
