--- a/.bzrignore
+++ b/.bzrignore
@@ -32,3 +32,6 @@ NuxImage/nux-image.pc
 NuxMesh/nux-mesh-0.9.pc
 NuxMesh/nux-mesh.pc
 NuxGraphics/nux-graphics-0.9.pc
+Nux/nux-0.9.pc
+Nux/nux.pc
+NuxGraphics/nux-graphics.pc
