Fix LT versioning, a couple of pc file bugs
(bzr r17)

--- a/configure.ac
+++ b/configure.ac
@@ -77,7 +77,7 @@ NUX_LT_CURRENT=lt_current
 NUX_LT_REV=lt_revision
 NUX_LT_AGE=lt_age
 NUX_LT_VERSION="$NUX_LT_CURRENT:$NUX_LT_REV:$NUX_LT_AGE"
-NUX_LT_LDFLAG="-version-info $NUX_LT_VERSION -export-dynamic"
+NUX_LT_LDFLAGS="-version-info $NUX_LT_VERSION"
 
 AC_SUBST(NUX_LT_VERSION)
 AC_SUBST(NUX_LT_LDFLAGS)
