--- a/NuxMesh/nux-mesh.pc.in
+++ b/NuxMesh/nux-mesh.pc.in
@@ -8,4 +8,4 @@ Description: Mesh loading utilities for Nux
 Version: @VERSION@
 Libs: -L${libdir} -lnux-mesh-@NUX_API_VERSION@
 Cflags: -I${includedir}/Nux-@NUX_API_VERSION@
-Requires: glib-2.0 nux-core-@NUX_API_VERSION@ nux-image-@NUX_API_VERSION@
+Requires: glib-2.0 nux-core-@NUX_API_VERSION@ nux-image-@NUX_API_VERSION@ gl glew glewmx
