Fix some header installation
(bzr r18)

--- a/Nux/Makefile.am
+++ b/Nux/Makefile.am
@@ -28,136 +28,6 @@ libnux_@NUX_API_VERSION@_la_LIBADD = \
 libnux_@NUX_API_VERSION@_la_LDFLAGS = \
   $(NUX_LT_LDFLAGS)
 
-source_h = \
-  $(srcdir)/PropertyItem/CheckBoxProperty.h \
-  $(srcdir)/PropertyItem/ColorGradientPropertyItem.h \
-  $(srcdir)/PropertyItem/ColorPreviewPropertyItem.h \
-  $(srcdir)/PropertyItem/ComboBoxListPropertyItem.h \
-  $(srcdir)/PropertyItem/ComboBoxPropertyItem.h \
-  $(srcdir)/PropertyItem/DoubleValuatorPropertyItem.h \
-  $(srcdir)/PropertyItem/EditTextLinePropertyItem.h \
-  $(srcdir)/PropertyItem/FilePropertyItem.h \
-  $(srcdir)/PropertyItem/IntegerValuatorPropertyItem.h \
-  $(srcdir)/PropertyItem/Matrix3PreviewPropertyItem.h \
-  $(srcdir)/PropertyItem/Matrix4PreviewPropertyItem.h \
-  $(srcdir)/PropertyItem/RangeValueIntegerPropertyItem.h \
-  $(srcdir)/PropertyItem/RangeValuePropertyItem.h \
-  $(srcdir)/PropertyItem/RGBAProperty.h \
-  $(srcdir)/PropertyItem/RGBProperty.h \
-  $(srcdir)/PropertyItem/SpinBoxDoublePropertyItem.h \
-  $(srcdir)/PropertyItem/SpinBoxPropertyItem.h \
-  $(srcdir)/PropertyItem/SplineCurvePropertyItem.h \
-  $(srcdir)/PropertyItem/Vector3Property.h \
-  $(srcdir)/PropertyItem/Vector3ValuatorPropertyItem.h \
-  $(srcdir)/PropertyItem/Vector4Property.h \
-  $(srcdir)/AbstractBackground.h \
-  $(srcdir)/AbstractButton.h \
-  $(srcdir)/AbstractComboBox.h \
-  $(srcdir)/AbstractSeparator.h \
-  $(srcdir)/AbstractThread.h \
-  $(srcdir)/ActionItem.h \
-  $(srcdir)/AnimatedTextureArea.h \
-  $(srcdir)/PaintLayer.h \
-  $(srcdir)/BaseArea.h \
-  $(srcdir)/BaseObject.h \
-  $(srcdir)/BaseWindow.h \
-  $(srcdir)/BezierCurveControl.h \
-  $(srcdir)/BezierCurveControl2.h \
-  $(srcdir)/Button.h \
-  $(srcdir)/Camera.h \
-  $(srcdir)/CheckBox.h \
-  $(srcdir)/ClientArea.h \
-  $(srcdir)/ColorArea.h \
-  $(srcdir)/ColorEditor.h \
-  $(srcdir)/ColorGradient.h \
-  $(srcdir)/ColorPickerDialog.h \
-  $(srcdir)/ColorPreview.h \
-  $(srcdir)/ColorRangeValuator.h \
-  $(srcdir)/ComboBoxComplex.h \
-  $(srcdir)/ComboBoxSimple.h \
-  $(srcdir)/CurveControl.h \
-  $(srcdir)/Dialog.h \
-  $(srcdir)/DoubleValidator.h \
-  $(srcdir)/EditTextBox.h \
-  $(srcdir)/FileSelector.h \
-  $(srcdir)/FloatingWindow.h \
-  $(srcdir)/FolderTreeItem.h \
-  $(srcdir)/FunctionGraph.h \
-  $(srcdir)/GfxSimulation.h \
-  $(srcdir)/GroupBox.h \
-  $(srcdir)/GroupBox2.h \
-  $(srcdir)/HexRegExpValidator.h \
-  $(srcdir)/Histogram.h \
-  $(srcdir)/HLayout.h \
-  $(srcdir)/HScrollBar.h \
-  $(srcdir)/HSeparator.h \
-  $(srcdir)/HSplitter.h \
-  $(srcdir)/HToolBar.h \
-  $(srcdir)/HueRangeValuator.h \
-  $(srcdir)/IntegerValidator.h \
-  $(srcdir)/InterfaceControl.h \
-  $(srcdir)/KeyboardHandler.h \
-  $(srcdir)/Layout.h \
-  $(srcdir)/ListControl.h \
-  $(srcdir)/Matrix3Editor.h \
-  $(srcdir)/Matrix3Preview.h \
-  $(srcdir)/Matrix4Editor.h \
-  $(srcdir)/Matrix4Preview.h \
-  $(srcdir)/MenuPage.h \
-  $(srcdir)/MenuBar.h \
-  $(srcdir)/MouseAreaCtrl.h \
-  $(srcdir)/MouseHandler.h \
-  $(srcdir)/NodeItem.h \
-  $(srcdir)/NodeNetProtocol.h \
-  $(srcdir)/NumericValuator.h \
-  $(srcdir)/Nux.h \
-  $(srcdir)/NuxGlobalInitializer.h \
-  $(srcdir)/Painter.h \
-  $(srcdir)/Panel.h \
-  $(srcdir)/PopUpWindow.h \
-  $(srcdir)/PropertyList.h \
-  $(srcdir)/RadioButton.h \
-  $(srcdir)/RadioButtonGroup.h \
-  $(srcdir)/RangeValue.h \
-  $(srcdir)/RangeValueInteger.h \
-  $(srcdir)/Readme.txt \
-  $(srcdir)/RGBValuator.h \
-  $(srcdir)/ScrollBar.h \
-  $(srcdir)/ScrollView.h \
-  $(srcdir)/SpinBox.h \
-  $(srcdir)/SpinBoxDouble.h \
-  $(srcdir)/SpinBox_Logic.h \
-  $(srcdir)/SplineCurveEditor.h \
-  $(srcdir)/SplineCurvePreview.h \
-  $(srcdir)/WindowCompositor.h \
-  $(srcdir)/StaticTextBox.h \
-  $(srcdir)/SystemThread.h \
-  $(srcdir)/TableCtrl.h \
-  $(srcdir)/TableItem.h \
-  $(srcdir)/TabView.h \
-  $(srcdir)/TextureArea.h \
-  $(srcdir)/TimeGraph.h \
-  $(srcdir)/TimerManager.h \
-  $(srcdir)/TimerProc.h \
-  $(srcdir)/ToolButton.h \
-  $(srcdir)/TreeControl.h \
-  $(srcdir)/Utils.h \
-  $(srcdir)/Theme.h \
-  $(srcdir)/Validator.h \
-  $(srcdir)/Valuator.h \
-  $(srcdir)/ValuatorDouble.h \
-  $(srcdir)/ValuatorInt.h \
-  $(srcdir)/Vector3Valuator.h \
-  $(srcdir)/Vector3ValuatorDouble.h \
-  $(srcdir)/VLayout.h \
-  $(srcdir)/VScrollBar.h \
-  $(srcdir)/VSeparator.h \
-  $(srcdir)/VSplitter.h \
-  $(srcdir)/VToolBar.h \
-  $(srcdir)/WidgetMetrics.h \
-  $(srcdir)/WidgetSmartPointer.h \
-  $(srcdir)/WindowThread.h
- 
 source_cpp = \
   $(srcdir)/PropertyItem/CheckBoxProperty.cpp \
   $(srcdir)/PropertyItem/ColorGradientPropertyItem.cpp \
@@ -287,14 +157,151 @@ source_cpp = \
   $(srcdir)/WidgetSmartPointer.cpp \
   $(srcdir)/WindowThread.cpp
 
+source_property_item_h = \
+  $(srcdir)/PropertyItem/CheckBoxProperty.h \
+  $(srcdir)/PropertyItem/ColorGradientPropertyItem.h \
+  $(srcdir)/PropertyItem/ColorPreviewPropertyItem.h \
+  $(srcdir)/PropertyItem/ComboBoxListPropertyItem.h \
+  $(srcdir)/PropertyItem/ComboBoxPropertyItem.h \
+  $(srcdir)/PropertyItem/DoubleValuatorPropertyItem.h \
+  $(srcdir)/PropertyItem/EditTextLinePropertyItem.h \
+  $(srcdir)/PropertyItem/FilePropertyItem.h \
+  $(srcdir)/PropertyItem/IntegerValuatorPropertyItem.h \
+  $(srcdir)/PropertyItem/Matrix3PreviewPropertyItem.h \
+  $(srcdir)/PropertyItem/Matrix4PreviewPropertyItem.h \
+  $(srcdir)/PropertyItem/RangeValueIntegerPropertyItem.h \
+  $(srcdir)/PropertyItem/RangeValuePropertyItem.h \
+  $(srcdir)/PropertyItem/RGBAProperty.h \
+  $(srcdir)/PropertyItem/RGBProperty.h \
+  $(srcdir)/PropertyItem/SpinBoxDoublePropertyItem.h \
+  $(srcdir)/PropertyItem/SpinBoxPropertyItem.h \
+  $(srcdir)/PropertyItem/SplineCurvePropertyItem.h \
+  $(srcdir)/PropertyItem/Vector3Property.h \
+  $(srcdir)/PropertyItem/Vector3ValuatorPropertyItem.h \
+  $(srcdir)/PropertyItem/Vector4Property.h
+
+source_h = \
+  $(srcdir)/AbstractBackground.h \
+  $(srcdir)/AbstractButton.h \
+  $(srcdir)/AbstractComboBox.h \
+  $(srcdir)/AbstractPaintLayer.h \
+  $(srcdir)/AbstractSeparator.h \
+  $(srcdir)/AbstractThread.h \
+  $(srcdir)/ActionItem.h \
+  $(srcdir)/AnimatedTextureArea.h \
+  $(srcdir)/PaintLayer.h \
+  $(srcdir)/BaseArea.h \
+  $(srcdir)/BaseObject.h \
+  $(srcdir)/BaseWindow.h \
+  $(srcdir)/BezierCurveControl.h \
+  $(srcdir)/BezierCurveControl2.h \
+  $(srcdir)/Button.h \
+  $(srcdir)/Camera.h \
+  $(srcdir)/CheckBox.h \
+  $(srcdir)/ClientArea.h \
+  $(srcdir)/ColorArea.h \
+  $(srcdir)/ColorEditor.h \
+  $(srcdir)/ColorGradient.h \
+  $(srcdir)/ColorPickerDialog.h \
+  $(srcdir)/ColorPreview.h \
+  $(srcdir)/ColorRangeValuator.h \
+  $(srcdir)/ComboBoxComplex.h \
+  $(srcdir)/ComboBoxSimple.h \
+  $(srcdir)/CurveControl.h \
+  $(srcdir)/Dialog.h \
+  $(srcdir)/DoubleValidator.h \
+  $(srcdir)/EditTextBox.h \
+  $(srcdir)/FileSelector.h \
+  $(srcdir)/FloatingWindow.h \
+  $(srcdir)/FolderTreeItem.h \
+  $(srcdir)/FunctionGraph.h \
+  $(srcdir)/GfxSimulation.h \
+  $(srcdir)/GroupBox.h \
+  $(srcdir)/GroupBox2.h \
+  $(srcdir)/HexRegExpValidator.h \
+  $(srcdir)/Histogram.h \
+  $(srcdir)/HLayout.h \
+  $(srcdir)/HScrollBar.h \
+  $(srcdir)/HSeparator.h \
+  $(srcdir)/HSplitter.h \
+  $(srcdir)/HToolBar.h \
+  $(srcdir)/HueRangeValuator.h \
+  $(srcdir)/IntegerValidator.h \
+  $(srcdir)/InterfaceControl.h \
+  $(srcdir)/KeyboardHandler.h \
+  $(srcdir)/Layout.h \
+  $(srcdir)/ListControl.h \
+  $(srcdir)/Matrix3Editor.h \
+  $(srcdir)/Matrix3Preview.h \
+  $(srcdir)/Matrix4Editor.h \
+  $(srcdir)/Matrix4Preview.h \
+  $(srcdir)/MenuPage.h \
+  $(srcdir)/MenuBar.h \
+  $(srcdir)/MouseAreaCtrl.h \
+  $(srcdir)/MouseHandler.h \
+  $(srcdir)/NodeItem.h \
+  $(srcdir)/NodeNetProtocol.h \
+  $(srcdir)/NumericValuator.h \
+  $(srcdir)/Nux.h \
+  $(srcdir)/NuxGlobalInitializer.h \
+  $(srcdir)/Painter.h \
+  $(srcdir)/Panel.h \
+  $(srcdir)/PopUpWindow.h \
+  $(srcdir)/PropertyList.h \
+  $(srcdir)/RadioButton.h \
+  $(srcdir)/RadioButtonGroup.h \
+  $(srcdir)/RangeValue.h \
+  $(srcdir)/RangeValueInteger.h \
+  $(srcdir)/Readme.txt \
+  $(srcdir)/RGBValuator.h \
+  $(srcdir)/ScrollBar.h \
+  $(srcdir)/ScrollView.h \
+  $(srcdir)/SpinBox.h \
+  $(srcdir)/SpinBoxDouble.h \
+  $(srcdir)/SpinBox_Logic.h \
+  $(srcdir)/SplineCurveEditor.h \
+  $(srcdir)/SplineCurvePreview.h \
+  $(srcdir)/WindowCompositor.h \
+  $(srcdir)/StaticTextBox.h \
+  $(srcdir)/SystemThread.h \
+  $(srcdir)/TableCtrl.h \
+  $(srcdir)/TableItem.h \
+  $(srcdir)/TabView.h \
+  $(srcdir)/TextureArea.h \
+  $(srcdir)/TimeGraph.h \
+  $(srcdir)/TimerManager.h \
+  $(srcdir)/TimerProc.h \
+  $(srcdir)/ToolButton.h \
+  $(srcdir)/TreeControl.h \
+  $(srcdir)/Utils.h \
+  $(srcdir)/Theme.h \
+  $(srcdir)/Validator.h \
+  $(srcdir)/Valuator.h \
+  $(srcdir)/ValuatorDouble.h \
+  $(srcdir)/ValuatorInt.h \
+  $(srcdir)/Vector3Valuator.h \
+  $(srcdir)/Vector3ValuatorDouble.h \
+  $(srcdir)/VLayout.h \
+  $(srcdir)/VScrollBar.h \
+  $(srcdir)/VSeparator.h \
+  $(srcdir)/VSplitter.h \
+  $(srcdir)/VToolBar.h \
+  $(srcdir)/WidgetMetrics.h \
+  $(srcdir)/WidgetSmartPointer.h \
+  $(srcdir)/WindowThread.h
+
 libnux_@NUX_API_VERSION@_la_SOURCES = \
   $(source_cpp) \
-  $(source_h)
+  $(source_h) \
+  $(source_property_item_h)
 
 nuxdir = $(includedir)/Nux-@NUX_API_VERSION@/Nux
-nux_HEADERS = \
-  $(source_h)
+nux_HEADERS = $(source_h)
 
+nux_property_itemdir = $(nuxdir)/PropertyItem
+nux_property_item_HEADERS = $(source_property_item_h)
+
+# pkg-config file
 nux-@NUX_API_VERSION@.pc: nux.pc
 	$(AM_V_GEN) cp -f nux.pc nux-@NUX_API_VERSION@.pc
 
