Some more fixes
(bzr r19)

--- a/Nux/Makefile.am
+++ b/Nux/Makefile.am
@@ -2,18 +2,16 @@ CLEANFILES =
 DISTCLEANFILES =
 EXTRA_DIST =
 
-AM_CPPFLAGS = \
+lib_LTLIBRARIES = \
+  libnux-@NUX_API_VERSION@.la
+
+libnux_@NUX_API_VERSION@_la_CPPFLAGS= \
   -I$(srcdir) \
   -I$(top_srcdir) \
   -DPREFIX=\""$(prefix)"\" \
 	-DLIBDIR=\""$(libdir)"\" \
   -DDATADIR=\""$(datadir)"\" \
-  -DG_LOG_DOMAIN=\"Nux\"
-
-lib_LTLIBRARIES = \
-  libnux-@NUX_API_VERSION@.la
-
-libnux_@NUX_API_VERSION@_la_CPPFLAGS= \
+  -DG_LOG_DOMAIN=\"Nux\" \
   $(GCC_FLAGS) \
   $(NUX_CFLAGS) \
   $(MAINTAINER_CFLAGS)
