Add bits for examples, and the first example
(bzr r37.1.2)

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = data NuxCore NuxImage NuxMesh NuxGraphics Nux tests
+SUBDIRS = data NuxCore NuxImage NuxMesh NuxGraphics Nux examples tests
 
 
 CLEANFILES =
