made nicer so that we don't conflict with others
(bzr r47.1.2)

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 SUBDIRS = data NuxCore NuxImage NuxMesh NuxGraphics Nux examples tests
 
-include aminclude.am
+include doxygen-include.am
 
 CLEANFILES = $(DX_CLEANFILES)
 DISTCLEANFILES =
