Support for enabling documentation building
(bzr r47.1.3)

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,6 +2,10 @@ SUBDIRS = data NuxCore NuxImage NuxMesh NuxGraphics Nux examples tests
 
 include doxygen-include.am
 
+if BUILD_DOCUMENTATION
+all: doxygen-doc
+endif
+
 CLEANFILES = $(DX_CLEANFILES)
 DISTCLEANFILES =
 EXTRA_DIST = $(DX_CONFIG)
